folder restructuring complete

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "ionic-habits",
   "version": "1.0.0",
   "description": "Find trends in your habits",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
     "start": "node server",
     "dev": "nodemon server"
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/emre-f/ionic-habits#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -28,6 +31,7 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.9.0",
     "mongoose-sequence": "^5.3.1",
+    "react-router-dom": "^6.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
