--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "d3": "^7.8.3",
     "levenshtein": "^1.0.5",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
   },
